crates/aion-awl/tests/fixtures/rev2/declarations/invalid/action_unknown_return_type.awl
//! The action's return type names a type never declared.
workflow notify_once
  input message: String
  outcome sent: type Receipt, route success
  outcome dropped: type Receipt, route failure

type Receipt { id: String, accepted: Bool }

worker notifier
  action send_message(message: String) -> Ack

step send
  send_message(message: message)

  outcome none: when message == "", route dropped(id: "empty", accepted: false)
  outcome some: otherwise, route sent(id: "queued", accepted: true)
